Positioned boxes on Portfolio page. Fixed paragraph overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,18 +15,20 @@ header {
     height:100px;
     margin:-20px 0px 10px 0px;
     background-color:white;
+    box-shadow:0px 2px 0px 0px #dddddd;
+    z-index:9;
        }
 
 
 /*This is the site-wide navigation*/      
 .navigation {
-    color:#666666;
-    float:right;
+    color:#666666;    
     Position:fixed;
     margin:10px;
     right:25%;
     Top:3%;
     font-family: 'georgia', Times, 'Times New Roman',serif;
+    z-index:0;
     
     
 }
@@ -77,26 +79,29 @@ h2 {
 
 body {   
     background-image: URL('images/background3.jpg');
-    z-index:2;
+    z-index:0;
     margin:125px;
+    padding:10px;
 }
 
 
 /*This is the about me content within the body*/
 .about-me {
-    Position:relative;
-    width:auto;
+    Position:fixed;
+    width:960px;
     background-color:white;
    box-shadow:2px 1px 1px #dddddd;
+   z-index:9;
     
 }
 
+
+
 .about-me-content {
-    position:relative;
+    
     left:2%;
-    max-width:1050px;
     right:-10px;
-    padding:0px 0px 10px 20px;
+    padding:0px 10px 10px 20px;
     margin:5px;
     color:#777777; 
     
@@ -110,12 +115,14 @@ p {
 }
 
 #headshot {
-    Position:relative;
-    Left:2%;
+    position:relative;
     float:left;
-    padding:10px;
-    max-width:100%;
-    height:auto;
+    width:20%;
+    margin:0px 10px 10px 38px;
+   
+    
+    
+   
 }
 
 .footer {
@@ -158,7 +165,7 @@ form {
 
 input {
     width:90%;
-    position:
+   
   
 }
 
@@ -172,6 +179,106 @@ input {
 
 #message_input {
     height:100px;
-    width:90%;
+    width:90%;    
+}
+
+
+
+/*portfolio Page*/
+
+.box-container-1 {
+float:left;
+left:3%;
+padding:5px;
+}
+
+.box-container-2 {
+float:left;
+left:3%;
+clear:auto;
+padding:5px;
+}
+
+.box-container-3 {
+ float:left;
+ left:3%;
+ padding:5px;
+}
+
+.box-container-4 {
+   float:left;
+   left:3%;
+   padding:5px;
+     
+}
+
+
+
+
+#green-textbox-1 {
+    position:relative;
+    background-color:#4aaaa5;
+    width:246px;
+    bottom:70px;
+    height:40px;
+    color:white;
+    text-align:center;
+    max-width:auto;
     
 }
+
+#green-textbox-2 {
+    position:relative;
+    background-color:#4aaaa5;
+    width:250px;
+    bottom:70px;
+    height:40px;
+    color:white;
+    text-align:center;
+}
+
+#green-textbox-3 {
+    position:relative;
+    
+    background-color:#4aaaa5;
+    width:250px;
+    bottom:70px;
+    height:40px;
+    color:white;
+    text-align:center;
+}
+
+#green-textbox-4 {   
+    position:relative;
+    background-color:#4aaaa5;
+    width:250px;
+    bottom:70px;
+    height:40px;
+    color:white;
+    text-align:center;
+    z-index:9;
+}
+
+.Green-box-font {
+    Position:absolute;
+    color:white;
+    Style:bold;
+    left:70px;
+    Bottom:-8px;
+    font-size:14pt;
+    Font-family:'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+.clearfix::after {
+    content: "";
+    display: block;
+    clear: both;
+}
+
+#about-me-portfolio {
+    position:fixed;
+    width:960px;
+    background-color:white;
+   box-shadow:2px 1px 1px #dddddd;
+   z-index:9;
+    }
